--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <url/>
     </scm>
     <properties>
-        <java.version>22</java.version>
+        <maven.compiler.release>22</maven.compiler.release>
     </properties>
     <dependencies>
         <dependency>
